Fix automatic scrolling on sub pages when clicking on hash links, prevent horizontal scrolling, change sidebar styles to match overall nav design

--- a/dev/scss/main/main.scss
+++ b/dev/scss/main/main.scss
@@ -23,7 +23,7 @@
 @import '../util';
 
 main {
-  padding: 0 $standard-size-and-spacing;
+  padding: $top-bottom-spacing $standard-size-and-spacing;
 
   // margin: {
   //   left:  $standard-margin;
